--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "body-parser": "^1.12.3",
     "express": "^4.12.3",
-    "jade": "^1.9.2"
+    "jade": "^1.9.2",
+    "lodash": "^4.13.1",
+    "lowdb": "0.13.0-beta-5",
+    "multer": "^1.1.0"
   },
   "devDependencies": {
     "mocha": "^2.2.4",
