--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
   "devDependencies": {
     "mocha": "^2.2.4",
     "should": "^6.0.1"
+  },
+  "engines": {
+    "node": "5.0.0",
+    "npm": "3.3.6"
   }
 }
